# ros_interface_stubs

./: .gitmodules  README.md  pyproject.toml
scripts/: generate_stubs.py
scripts/templates/: action.j2  init.j2  message.j2  service.j2
stubs/common_interfaces/diagnostic_msgs/msg/: __init__.pyi  _diagnostic_array.pyi  _diagnostic_status.pyi  _key_value.pyi
stubs/common_interfaces/diagnostic_msgs/srv/: __init__.pyi  _add_diagnostics.pyi  _self_test.pyi
stubs/common_interfaces/geometry_msgs/msg/: __init__.pyi  _accel.pyi  _accel_stamped.pyi  _accel_with_covariance.pyi  _accel_with_covariance_stamped.pyi  _inertia.pyi  _inertia_stamped.pyi  _point.pyi  _point32.pyi  _point_stamped.pyi  _polygon.pyi  _polygon_instance.pyi  _polygon_instance_stamped.pyi  _polygon_stamped.pyi  _pose.pyi  _pose_array.pyi  _pose_stamped.pyi  _pose_with_covariance.pyi  _pose_with_covariance_stamped.pyi  _quaternion.pyi  _quaternion_stamped.pyi  _transform.pyi  _transform_stamped.pyi  _twist.pyi  _twist_stamped.pyi  _twist_with_covariance.pyi  _twist_with_covariance_stamped.pyi  _vector3.pyi  _vector3_stamped.pyi  _velocity_stamped.pyi  _wrench.pyi  _wrench_stamped.pyi
stubs/common_interfaces/nav_msgs/msg/: __init__.pyi  _goals.pyi  _grid_cells.pyi  _map_meta_data.pyi  _occupancy_grid.pyi  _odometry.pyi  _path.pyi  _trajectory.pyi  _trajectory_point.pyi
stubs/common_interfaces/nav_msgs/srv/: __init__.pyi  _get_map.pyi  _get_plan.pyi  _load_map.pyi  _set_map.pyi
stubs/common_interfaces/sensor_msgs/msg/: _imu.pyi  (+27 more)
stubs/unique_identifier_msgs/msg/: __init__.pyi  _u_u_i_d.pyi  _uuid.pyi
(+220 files in other folders)
